@@ -1,5 +1,5 @@
-<!ENTITY version "SVN-20120816">
-<!ENTITY releasedate "August 16, 2012">
+<!ENTITY version "SVN-20120820">
+<!ENTITY releasedate "August 20, 2012">
 <!ENTITY copyrightdate "1999-2012"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone "7.2">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
